# qa.guru_lesson_19_2

./: README.md  config.py  pyproject.toml
qa_guru_lesson_19_2/utils/: attach.py
tests/android/: conftest.py  test_wikipedia.py
